# PhoenixRooivalk

./: .codacy.yml  .continuerules  .gitignore  .markdownlint.json  .prettierignore  .prettierrc  AGENT_BACKLOG.md  AGENT_TEAMS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_RESPONSE.md  CONTRIBUTING.md  CORS_LOGIN_FIX.md  Cargo.toml  FINAL_SUMMARY.md  FIX_GUIDE.md  KNOWN_ISSUES.md  MERGE_RESOLUTION.md  NEW_REQUIREMENTS.md  PITCH_DECK.md  PITCH_DECK_COMPLETION_SUMMARY.md  PITCH_DECK_ONE_PAGER.md  PITCH_DECK_README.md  PR_SUMMARY.md  QUICK_FIX.md  README.md  RESOLUTION_SUMMARY.md  cliff.toml  clippy.toml  codecov.yml  cosmos-db.bicep  cspell.json  deploy-phoenixrooivalk.ps1  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  turbo.json
.ai/: README.md  continuerules  cursorrules  windsurfrules
.claude/: settings.json
.github/: AZURE_SETUP.md  AZURE_TROUBLESHOOTING.md  COPILOT_INSTRUCTIONS_SUMMARY.md  DEPLOYMENT_SEQUENCE.md  DEPLOYMENT_WORKFLOW_GUIDE.md  QUICK_REFERENCE.md  SECRETS_SETUP.md  VALIDATION_SUMMARY.md  WORKFLOW_IMPROVEMENTS.md  codeql-config.yml  copilot-instructions.md
apps/: README.md
apps/api/: .env.example  CLAUDE.md  Cargo.toml
apps/api/docs/: DEPLOYMENT.md
apps/api/src/: db.rs  db_errors.rs  handlers.rs  handlers_x402.rs  lib.rs  main.rs  migrations.rs  models.rs  rate_limit.rs  repository.rs
apps/api/src/entities/: application.rs  evidence.rs  mod.rs  session.rs  user.rs
apps/api/src/providers/: cosmos.rs  mod.rs  sqlite.rs
apps/api/tests/: app_setup_tests.rs  career_application_tests.rs  evidence_creation_tests.rs  evidence_retrieval_tests.rs  foreign_keys_tests.rs  http_evidence.rs  pagination_tests.rs  profile_update_tests.rs  workspace_integration_tests.rs  x402_tests.rs
apps/api/tests/common/: mod.rs
apps/detector/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements-pi.txt  requirements.txt
apps/detector/azure-ml/: README.md  conda.yaml  job.yaml  setup-azure.sh  train.py
apps/detector/configs/: dataset-full.yaml  dataset-mvp.yaml  fire-net-example.yaml  quickstart.yaml
apps/detector/docs/: ADVANCED_SETUP.md  COUNTERMEASURES.md  FIRE_NET_HARDWARE.md  PRODUCT_CATALOG.md  architecture.md  classification-taxonomy.md  configuration.md  countermeasure-options.md  product-catalog.md  switch.md  training-cost-estimate.md
apps/detector/scripts/: download_public_datasets.py  validate_model.py
apps/detector/src/: __init__.py  adaptive_frame_rate.py  alert_handlers.py  alert_retry_queue.py  detector.py  factory.py  federated_learning.py  frame_sources.py  hardware.py  inference_engines.py  interfaces.py  main.py  metrics.py  multi_camera.py  phone_audio_bridge.py  renderers.py  safety_validation.py  simulation_mode.py  streaming.py  targeting.py  test_audio_pwm.py  threat_classification.py  track_persistence.py  trackers.py  turret_controller.py  turret_factory.py  turret_transport.py
apps/detector/src/config/: __init__.py  constants.py  settings.py
apps/detector/src/utils/: __init__.py  geometry.py  logging_config.py
apps/detector/tests/: TEST_PLAN.md  __init__.py  conftest.py
apps/detector/tests/integration/: __init__.py  test_main_cli.py  test_pipeline_workflow.py
apps/detector/tests/unit/: __init__.py  conftest.py  test_audio_pwm_utils.py  test_factory.py  test_frame_sources.py  test_geometry.py  test_inference_engines.py  test_phone_bridge.py  test_settings.py  test_settings_edge_cases.py  test_streaming.py  test_targeting.py  test_track_persistence.py  test_training.py  test_turret_controller.py  test_turret_factory.py  test_turret_transport.py
apps/evidence-cli/: Cargo.toml
apps/evidence-cli/src/: main.rs
apps/keeper/: .env.example  CLAUDE.md  Cargo.toml
apps/keeper/src/: batch_anchor.rs  lib.rs  main.rs
apps/keeper/tests/: batch_anchor_integration.rs
apps/threat-simulator-desktop/: BUILD_SUCCESS.md  CLAUDE.md  COMPLETE.md  Cargo.toml  FINAL_SUMMARY.md  LAUNCH_GUIDE.md  RELEASE.md
apps/threat-simulator-desktop/public/: styles.css
apps/threat-simulator-desktop/src/: components.rs  game.rs  lib.rs  tauri_api.rs
apps/threat-simulator-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/threat-simulator-desktop/src-tauri/src/: main.rs
apps/threat-simulator-desktop/src/components/: cooldown_meter.rs  detection_panel.rs  drone_deployment.rs  energy_management.rs  event_feed.rs  game_canvas.rs  hud.rs  loading.rs  overlays.rs  research_panel.rs  stats_panel.rs  synergy_system.rs  token_store.rs  video_stream.rs  weapon_panel.rs
apps/threat-simulator-desktop/src/game/: formations.rs  particles.rs  waves.rs
config/: README.md  clippy.toml  cspell.json  editorconfig  eslint.config.mjs  eslintrc.js  prettierignore  prettierrc
crates/anchor-solana/: Cargo.toml
crates/anchor-solana/src/: lib.rs
crates/x402/: Cargo.toml  README.md
crates/x402/src/: attestation.rs  config.rs  error.rs  facilitator.rs  lib.rs  middleware.rs  types.rs
crates/x402/tests/: x402_integration.rs
docs/: ARCHITECTURE_DECISIONS.md  AUDIT_REPORT.md  DATABASE_SCHEMA.md  DEPLOYMENT_RUNBOOK.md  GAME_IMPROVEMENTS_TODO.md  IMPLEMENTATION_COMPLETE.md  PERFORMANCE_BENCHMARKS.md  PROJECT_STRUCTURE.md  REFACTORING_SUMMARY.md  TESTING_STRATEGY.md  TROUBLESHOOTING_GUIDE.md  UI_IMPROVEMENTS_SUMMARY.md  VISUAL_IMPROVEMENTS_GUIDE.md  WASM_EMBEDDING_SUMMARY.md  audio-pwm-servo-build-guide.md  azure-naming-conventions.md  branching-strategy.md  dev-setup.md  rc-drone-control-integration.md
e2e/: package.json  playwright.config.ts
pitch-deck/: PITCH_DECK_v2.0.md  PhoenixRooivalk_Pitch_Deck_v2.0.html  README.md  VERSION_CONTROL.md  generate-ppt.sh
scripts/: Get-AzureSecrets.ps1  README.md  Setup-CosmosContainers.ps1  azure-secrets-output.txt  check-docs-links.sh  create-hardware-phase-issues.ps1  create-hardware-phase-issues.sh  diagnose-azure-functions.sh  seed-known-emails.js  setup-branching-strategy.sh  setup-cosmos-containers.sh  validate-deployment-config.sh  validate-env.sh
tests/: workspace_integration.rs
(+1320 files in other folders)
