[workspace]
resolver = "2"
members = [
  "apps/api",
  "apps/keeper",
  "apps/evidence-cli",
  "apps/threat-simulator-desktop",
  "apps/threat-simulator-desktop/src-tauri",
  "crates/evidence",
  "crates/anchor-etherlink",
  "crates/anchor-solana",
  "crates/address-validation",
  "crates/phoenix-common",
  "crates/x402",
]

[workspace.package]
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
getrandom = { version = "0.4.1", features = ["wasm_js"] }