[package]
name = "phoenix-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "json"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "macros"], default-features = false }
phoenix-common = { path = "../../crates/phoenix-common" }
phoenix-x402 = { path = "../../crates/x402" }
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
phoenix-keeper = { path = "../keeper" }
anchor-etherlink = { path = "../../crates/anchor-etherlink" }
once_cell = "1.19"  # Added for mutex synchronization in tests