[package]
name = "phoenix-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "json"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"], default-features = false }
phoenix-common = { path = "../../crates/phoenix-common" }
phoenix-x402 = { path = "../../crates/x402" }
anyhow = "1.0"
thiserror = "2.0"
# Rate limiting
tower = "0.5"
tower_governor = "0.8"
governor = "0.10"
# Cryptographic hashing for attestation preview
sha2 = "0.10"
hex = "0.4"
# Async trait support for database providers
async-trait = "0.1"
# Azure Cosmos DB support (optional feature)
# Disable default-features to avoid pulling native-tls (RUSTSEC-2025-0004);
# azure_core defaults include reqwest_native_tls which we replace with rustls.
azure_data_cosmos = { version = "0.30", optional = true, default-features = false, features = ["hmac_rust"] }
azure_identity = { version = "0.31", optional = true, default-features = false }
azure_core = { version = "0.31", optional = true, default-features = false, features = ["reqwest", "reqwest_deflate", "reqwest_gzip"] }
# Provide rustls TLS backend for azure crates' transitive reqwest 0.12 dep
reqwest_compat = { package = "reqwest", version = "0.12", optional = true, default-features = false, features = ["rustls-tls-native-roots"] }

[features]
cosmos = ["azure_data_cosmos", "azure_identity", "azure_core", "reqwest_compat"]

[dev-dependencies]
# Use rustls to avoid native OpenSSL vulnerabilities (RUSTSEC-2025-0004)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tempfile = "3"
phoenix-keeper = { path = "../keeper" }
phoenix-evidence = { path = "../../crates/evidence" }
anchor-etherlink = { path = "../../crates/anchor-etherlink" }
anchor-solana = { path = "../../crates/anchor-solana" }
once_cell = "1.19"  # Added for mutex synchronization in tests
governor = "0.10"    # For rate limiter tests