[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenixrooivalk-detector"
version = "2.0.0"
description = "Modular detection system for edge devices (Raspberry Pi, Jetson, desktop)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "PhoenixRooivalk Team"}
]
keywords = ["drone", "detection", "raspberry-pi", "jetson", "edge-computing", "computer-vision", "yolo", "tflite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
pi = [
    "tflite-runtime>=2.14.0",
    "opencv-python-headless>=4.8.0",
]
jetson = [
    # Jetson uses JetPack-provided TensorRT/CUDA
    "opencv-python>=4.8.0",
    "onnxruntime-gpu>=1.15.0",
]
desktop = [
    "tensorflow>=2.13.0",
    "opencv-python>=4.8.0",
]
coral = [
    "pycoral>=2.0.0",
]
onnx = [
    "onnxruntime>=1.15.0",
]
streaming = [
    "aiohttp>=3.9.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.9",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
all = [
    "phoenixrooivalk-detector[pi,streaming,dev,docs]",
]

[project.scripts]
drone-detector = "main:main"

[project.urls]
Homepage = "https://github.com/JustAGhosT/PhoenixRooivalk"
Documentation = "https://github.com/JustAGhosT/PhoenixRooivalk/tree/main/apps/detector/docs"
Repository = "https://github.com/JustAGhosT/PhoenixRooivalk"
Issues = "https://github.com/JustAGhosT/PhoenixRooivalk/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# Ruff configuration
[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__
"tests/*" = ["B011"]       # Allow assert in tests

[tool.ruff.isort]
known-first-party = ["config", "utils", "interfaces"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["config", "utils", "interfaces"]

# mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "docs/"]

[[tool.mypy.overrides]]
module = "cv2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tflite_runtime.*"
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring integration setup",
    "hardware: marks tests requiring hardware (Pi, camera, etc.)",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
