[package]
name = "phoenix-keeper"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "macros"], default-features = false }
phoenix-common = { path = "../../crates/phoenix-common" }
phoenix-evidence = { path = "../../crates/evidence" }
anchor-etherlink = { path = "../../crates/anchor-etherlink" }
rand = "0.9"

[dev-dependencies]
tempfile = "3"
serial_test = "3.0"
