[package]
name = "threat-simulator-desktop"
version = "0.1.0"
description = "Phoenix Rooivalk Threat Simulator - Desktop Application"
authors = ["Phoenix Rooivalk Team"]
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
chrono = "0.4"
getrandom = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# getrandom 0.3 is pulled transitively by leptos/rand/tauri; enable wasm_js
# feature for Cargo feature unification so the WASM backend compiles.
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Performance",
    "KeyboardEvent",
    "MouseEvent",
    "Touch",
    "TouchList",
    "TouchEvent",
    "DomRect",
    "Element",
    "EventTarget",
    "HtmlElement",
    "Storage",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }

