[package]
name = "anchor-solana"
version = "0.1.0"
edition = "2021"

[dependencies]
phoenix-evidence = { path = "../evidence" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.49", features = ["full"] }