[package]
name = "phoenix-x402"
version = "0.1.0"
edition = "2021"
description = "x402 payment protocol integration for Phoenix Rooivalk evidence verification"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tracing = "0.1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.48", features = ["full"] }
