[package]
name = "threat-simulator-tauri"
version = "0.1.0"
description = "Phoenix Rooivalk Threat Simulator - Tauri Backend"
authors = ["Phoenix Rooivalk Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-shell = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Evidence integration
phoenix-evidence = { path = "../../../crates/evidence" }
phoenix-common = { path = "../../../crates/phoenix-common" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

